Fix button border gap

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -12,7 +12,6 @@
   padding-left: 55px;
   padding-right: 55px;
   margin-top: 50px;
-  overflow: hidden;
   position: relative;
 }
 .button:hover {
@@ -21,12 +20,14 @@
 .button:before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -3px;
+  left: -3px;
   width: 100%;
   height: 100%;
   z-index: -1;
   background: black;
+  border-radius: 38px;
+  border: 3px solid black;
 }
 .button::after {
   content: '';
